# max-auto-parallelisation-library

./: .gitignore  Digraph.gv  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
max_auto_parallelisation_library/: __init.py  input.py  maxpar.py  module1.py  validators.py
tests/: test_maxpar.py  test_module1.py
